[workspace]
members = [
    "rusqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Per Odlund <odlund@posteo.net>"]

[package]
version.workspace = true
# license.workspace = true
edition.workspace = true
authors.workspace = true
# repository.workspace = true
name = "sequoia-autocrypt-store"

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
idna = "0.3.0"
sequoia-autocrypt = "0.25.0"
sequoia-openpgp = "1.13.0"

[dev-dependencies]
sequoia-autocrypt-store-rusqlite = { path = "rusqlite" }

[[test]]
name = "rusqlite"
path = "tests/rusqlite.rs"
