[package]
version = "0.1.0"
edition = "2021"
authors = ["Per Odlund <odlund@posteo.net>"]
name = "sequoia-autocrypt-store"

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
idna = "0.3.0"
sequoia-autocrypt = "0.25.0"
sequoia-openpgp = "1.13.0"
rusqlite = { version = "0.28.0", features = ["chrono"], optional = true }

[features]
default = ["rusqlite"]
rusqlite = ["dep:rusqlite"]

[[example]]
name = "localstore"
required-features = ["rusqlite"]
