[package]
version.workspace = true
# license.workspace = true
edition.workspace = true
authors.workspace = true
# repository.workspace = true
name = "sequoia-autocrypt-store-rusqlite"

[dependencies]
sequoia-autocrypt-store = { path = "../" }
anyhow = "1.0.69"
chrono = "0.4.23"
rusqlite = { version = "0.28.0", features = ["chrono"] }
sequoia-openpgp = "1.13.0"
